2007-05-04  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (themes_init): Use readable name rather than file name
	in themes list

2007-05-03  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: (wp_tree_delete_event): Fixed a leak.

2007-05-03  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-desktop.c:
	Ported Jens Gransauer's patch for bug #332810 to the appearance capplet
	and applied it.


2007-05-02  Jens Granseuer  <jensgr@gmx.net>

	* appearance-ui.c: (toolbar_detachable_cb), (ui_init): use proper
	GConf notification instead of hand-picking the correct signal for
	detachable toolbar

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* Makefile.am: fizz says: don't indent with spaces in Makefile.am.
	* ChangeLog: I say: don't do so in ChangeLog either.

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: Added drag and drop, re-enabled the watch cursor
	when adding images, and removed some commented out code.

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.[ch]: Corrected copyright notice authors.

2007-05-01  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	* appearance-desktop.c:
	* appearance-desktop.h:
	* appearance-main.h:
	* Makefile.am:
	* gnome-wp-*.[ch]:

	Implement the the Desktop tab. Drag and drop still has to be done.

2007-05-01  Thomas Wood  <thos@gnome.org>

	* appearance.glade: Combine Themes and Appearance tabs

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-ui.c: (ui_init):
	* appearance.glade: convert all instances of GtkOptionMenu to
	GtkComboBox

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-ui.c: (ui_init):
	* appearance-ui.h:
	* appearance.h: we don't need to unref the GConfPropertyEditors

2007-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-ui.c:
	* appearance-ui.h:
	* appearance.h:
	* appearance.glade:
